fixed issue with long song names and now playing indicator overlapping

--- a/public/css/_main.scss
+++ b/public/css/_main.scss
@@ -86,26 +86,3 @@
     line-height: 1;
     flex: 1;
   }
-
-  .now-playing-indicator,
-  .now-paused-indicator {
-    &:before {
-      position: absolute;
-      top: 4px;
-      right: 4px;
-      display: block;
-      font-size: 18px;
-    }
-  }
-
-  .now-playing-indicator {
-    &:before {
-      @extend .icon-volume-high;
-    }
-  }
-
-  .now-paused-indicator {
-    &:before {
-      @extend .icon-volume-off;
-    }
-  } 
